--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -216,6 +216,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bind =  $mainMod,F,fullscreen
 
 bind = SUPER, L, exec, wlogout
 bind = SUPER, R, exec, rofi -show drun
