--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -29,6 +29,7 @@ $menu = wofi --show drun
 
 exec-once = nm-applet
 exec-once = waybar & hyprpaper
+exec-once = syncthing
 
 
 #############################
@@ -220,6 +221,7 @@ bind =  $mainMod,F,fullscreen
 
 bind = SUPER, L, exec, wlogout
 bind = SUPER, R, exec, rofi -show drun
+bind = SUPER, T, exec, cd Documents/TiddlyDesktop && ./nw
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
