--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,1 +1,10 @@
 background_opacity 0.4
+window_padding_width 10
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="AnonymicePro Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
