spotify special workspace

--- a/hypr/windows.conf
+++ b/hypr/windows.conf
@@ -2,6 +2,8 @@ windowrulev2 = suppressevent maximaize, class:.*
 
 windowrulev2 = float,class:(qalculate-gtk)
 windowrulev2 = workspace special:calculator,class:(qalculate-gtk)
+windowrule = size 100 100,class:(qalculate-gtk)
 
-windowrulev2 = float,class:(spotify)
-windowrulev2 = workspace special:spotify,class:(spotify)
+windowrule = float,title:(Spotify Free)
+windowrule = workspace special:music,title:(Spotify Free)
+windowrule = center,title:(Spotify Free)
