--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -7,14 +7,14 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 
 bind = $mainMod, 1, exec, pgrep qalculate-gtk && hyprctl dispatch togglespecialworkspace calculator || qalculate-gtk &
-bind = $mainMod, 2, exec, pgrep spotify && hyprctl dispatch togglespecialworkspace spotify || spotify &
+bind = $mainMod, 2, exec, pgrep spotify && hyprctl dispatch togglespecialworkspace music || spotify &
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 bind =  $mainMod,F,fullscreen
 
-bind = SUPER, L, exec, wlogout
+bind = SUPER, L, exec, hyprlock
 bind = SUPER, R, exec, walker
 bind = SUPER, G, togglegroup
 
-bind = $mainMod, D, exec, hyprctl dismissnotify
+bind = $mainMod, C, exec, notify-send $(hyprpicker)
